testsuite/bsc.options/OptionsAttrBad2.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling OptionsAttrBad2.bsv
Error: "OptionsAttrBad2.bsv", line 2, column 8: (S0008)
  Unrecognized flag: -foo
