testsuite/bsc.options/OptionsAttrBad2.bsv
(* synthesize, options="-foo" *)
module sysOptionsAttrBad2 ();
endmodule

